Fix: Fixed z-index

--- a/src/components/layout/InfoSection/InfoSection.module.css
+++ b/src/components/layout/InfoSection/InfoSection.module.css
@@ -40,24 +40,6 @@
   background-color: hsl(0, 0%, 90%);
 }
 
-/* .option::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 120%;
-  top: -10%;
-  left: 0;
-  z-index: 1;
-  bottom: 0;
-  right: 0;
-  opacity: 0;
-  transition: var(--transition-base);
-  box-shadow: 0 0 10px rgb(0 0 0 / 10%);
-  background-color: white;
-} */
-
-/* -------------- */
-
 .selected {
   height: 10rem;
   width: 100%;
@@ -73,7 +55,7 @@
   height: 120%;
   top: -10%;
   left: 0;
-  z-index: 100;
+  z-index: 50;
   bottom: 0;
   right: 0;
   opacity: 0;
